roles/microk8s_single_node/files/metallb-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
  annotations:
    metallb.universe.tf/address-pool: ingress-addresspool
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
